Fix spacing

--- a/src/modules/contact/components/ContactForm/styles.css
+++ b/src/modules/contact/components/ContactForm/styles.css
@@ -20,6 +20,7 @@
     @apply grid gap-5;
 
     grid-template-columns: auto 1fr;
+    align-items: center;
 
     @media screen and (max-width: 576px) {
         display: block;
